# Automotive_HMI

./: CMakeLists.txt  Main.qml  README.md  main.cpp  resource.qrc
QML/: BottomBar.qml  Car_Door_Light.qml  Seat_Climate.qml
QML/Media/: AppHeader.qml  ButtonControl.qml  Media.cpp  Media.h  Media.qml  MediaData.js  MediaInfoControl.qml  PlaylistView.qml  SwitchButton.qml  player.cpp  player.h  playlistmodel.cpp  playlistmodel.h
QML/Model/: Mercedes.qml  Parking.qml  Seat_Model.qml
asset/meshes/: backrest_control_mesh.mesh  cube_mesh.mesh  headrest_control_mesh.mesh  lumber_control_mesh.mesh  mesh_Body_mat_body_0_mesh.mesh  mesh_Body_mat_bottom_0_mesh.mesh  mesh_Body_mat_chrome_0_mesh.mesh  mesh_Body_mat_glass_0_mesh.mesh  mesh_Body_mat_inside_gauges_0_mesh.mesh  mesh_Body_mat_inside_panel_0_mesh.mesh  mesh_Body_mat_leather_0_mesh.mesh  mesh_Body_mat_lights_0_mesh.mesh  mesh_Body_mat_lights_glass2_0_mesh.mesh  mesh_Body_mat_lights_glass_0_mesh.mesh  mesh_Body_mat_plastic_0_mesh.mesh  mesh_Body_mat_rubber_0_mesh.mesh  mesh_Body_mat_salon_0_mesh.mesh  mesh_BrakeDiskFL_mat_brakes_0_mesh.mesh  mesh_BrakeDiskFR_mat_brakes_0_mesh.mesh  mesh_BrakeDiskRL_mat_brakes_0_mesh.mesh  mesh_BrakeDiskRR_mat_brakes_0_mesh.mesh  mesh_BrakeFL_mat_brakes_0_mesh.mesh  mesh_BrakeFR_mat_brakes_0_mesh.mesh  mesh_BrakeRL_mat_brakes_0_mesh.mesh  mesh_BrakeRR_mat_brakes_0_mesh.mesh  mesh_DoorFL_mat_body_0_mesh.mesh  mesh_DoorFL_mat_chrome_0_mesh.mesh  mesh_DoorFL_mat_glass_0_mesh.mesh  mesh_DoorFL_mat_inside_panel_0_mesh.mesh  mesh_DoorFL_mat_leather_0_mesh.mesh  mesh_DoorFL_mat_lights_0_mesh.mesh  mesh_DoorFL_mat_plastic_0_mesh.mesh  mesh_DoorFL_mat_rubber_0_mesh.mesh  mesh_DoorFL_mat_salon_0_mesh.mesh  mesh_DoorFR_mat_body_0_mesh.mesh  mesh_DoorFR_mat_chrome_0_mesh.mesh  mesh_DoorFR_mat_glass_0_mesh.mesh  mesh_DoorFR_mat_inside_panel_0_mesh.mesh  mesh_DoorFR_mat_leather_0_mesh.mesh  (+58 more)
cpp_file/: bottombar.cpp  door.cpp  light.cpp  media.cpp
header_file/: bottombar.h  door.h  light.h  media.h
